# ai-parser-spike

./: .claude_environment.json  .gitattributes  .gitignore  ADDITIONAL_LLM_OPTIMIZATIONS.md  CLAUDE.md  ITERATION_EFFICIENCY_REPORT.md  LICENSE  MANIFEST.in  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TEST_RESULTS.md  PRE_TOKENIZER_SOLUTION.md  README.md  SPIKE-SCOPE.md  TERMINOLOGY.md  ai-parser-spike.code-workspace  conftest.py  convert_real_logs.py  generate_large_samples.py  pyproject.toml  requirements.txt  run_real_api_test.sh  run_vrl_generation.py  setup.py  test_anthropic_simple.py  test_automated_llm_vrl.py  test_complete_optimization.py  test_context_only.py  test_model_capabilities.py  test_pre_tokenizer.py  test_regex_detection.py  test_single_log.py  test_ssh_streaming.py  test_three_file_output.py  test_vector_with_transforms.py  testing-loop-output.txt  vrl_cpu_cost_guide_vector.md
aws/: account  connection-profile.json
config/: config.yaml  model_capabilities.yaml
deprecated/: Claude.md  syslog-sources.txt
deprecated/config/: model_preferences.yaml  model_priorities.yaml
deprecated/external_backup_20250828_212250/: vrl-core-prompt.md
deprecated/old_tests/: download_syslog_samples.py  generate_comms_device_logs.py  generate_large_diverse_samples.py  run_with_api.py  test_automated_llm_vrl.py  test_cisco_token_aware.py  test_complete_pipeline.py  test_field_naming.py  test_focused_success.py  test_iteration_efficiency.py  test_iteration_quick.py  test_iteration_stream.py  test_local_fixes_direct.py  test_model_selection.py  test_optimizations.py  test_pyvrl_quick.py  test_pyvrl_vector.py  test_raw_syslog.py  test_real_anthropic.py  test_real_vector_transform.py  test_vector_cli_debug.py  test_vector_direct.py  test_vector_file_input.py  test_vector_manual.py  test_vector_parsing.py  test_vrl_model_override.py
deprecated/optimization_docs/: COST_OPTIMIZATION_STRATEGY.md  FINAL_OPTIMIZATION_REPORT.md  IMPLEMENTATION-SUMMARY.md  LOGREDUCER_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md
deprecated/output/: fields.json
deprecated/root_files/: 101-transform-flatten-message.yml  main.py
deprecated/src/: analyzer.py  api_models.py  api_routes.py  litellm_client.py  llm_api_client.py  logging_config.py  model_specific_vrl_fixer.py  pipeline.py  prompt_optimizer.py  services.py  streaming_integration.py  (+2 more)
docs/: LITELLM_MIGRATION.md
external_backup_20250828_212250/: parser-system-prompts.md  type_maps.csv  vector-vrl-system.md
output/: ANTI_CYCLICAL_RESULTS.json  BACKGROUND_TEST_RESULT.json  final_success.json  performance_stage_metrics.json  ssh_final_failure.json  ssh_final_output.txt
pre_tokenizer/: enhanced_optimizer.py  sample_optimizer.py
samples-parsed/: apache-generated.vrl  cisco-asa-rest.json  cisco-asa.json  cisco-asa.vrl  ssh-generated.json  ssh-generated.vrl
scripts/: first_step_iteration.py  generate_vrl.py  stage1_minimal_test.py  test_performance_iteration.py  test_stage1_simple.py  test_working_vrl.py  vrl_performance_cli.py
src/: auto_vrl_generator.py  capability_model_selector.py  cli.py  cli_v2.py  config.py  config_driven_selector.py  error_batch_collector.py  field_naming.py  llm_api_client.py  llm_client.py  llm_context_manager.py  llm_iterative_session.py  llm_streaming_monitor.py  model_prompt_selector.py  models.py  performance.py  persistent_vrl_session.py  pyvrl_tester.py  simple_model_selector.py  token_aware_context_manager.py  vector_pipeline.py  vrl_generator.py  vrl_syntax_fixer.py  vrl_testing_loop.py  vrl_testing_loop_clean.py
test_final/: fields.json  parser.vrl
test_output/: fields.json  parser.vrl
test_output_cyber/: fields.json  parser.vrl
test_output_high/: fields.json  parser.vrl
test_output_low/: fields.json  parser.vrl
test_output_sonnet/: fields.json  parser.vrl
tests/: final_comprehensive_test.py  generate_and_save_vrl.py  test_analyzer.py  test_config.py  test_config_loader.py  test_end_to_end_parsing.py  test_iterative_syslog_parsing.py  test_llm_error_handling.py  test_model_selector.py  test_performance.py  test_session_system.py  test_ssh_final.py  test_syslog_samples.py  test_token_protection.py  test_vrl_generator.py
vrl_parser/: __init__.py
(+49 files in other folders)
