[project]
name = "ai-parser-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "click>=8.2.1",
    "faker>=37.5.3",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "pydantic>=2.11.7",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "pyvrl>=0.0.2",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "requests>=2.32.5",
    "openai>=1.101.0",
    "google-generativeai>=0.8.5",
    "toml>=0.10.2",
    "tiktoken>=0.11.0",
    "litellm>=1.76.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]
